OnboardingV2Minimal/force-app/main/default/objects/Communication_Dispatch_Policy__mdt/Communication_Dispatch_Policy__mdt.object-meta.xml
<CustomObject>
    <label>Communication Dispatch Policy</label>
    <pluralLabel>Communication Dispatch Policies</pluralLabel>
</CustomObject>