OnboardingV2Minimal/force-app/main/default/objects/Communication_Dispatch_Policy__mdt/fields/Communication_Type__c.field-meta.xml
<CustomField>
    <fullName>Communication_Type__c</fullName>
    <label>Communication Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Welcome</fullName>
            </value>
            <value>
                <fullName>Completion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>