OnboardingV2Minimal/force-app/main/default/objects/Communication_Dispatch_Policy__mdt/fields/Recipient_Type__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Type__c</fullName>
    <label>Recipient Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>PrincipalOwner</fullName>
                <label>Principal Owner</label>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>