OnboardingV2Minimal/force-app/main/default/objects/Communication_Dispatch_Policy__mdt/fields/Send_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Send_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Enabled</label>
    <type>Checkbox</type>
</CustomField>