OnboardingV2Minimal/force-app/main/default/objects/Communication_Dispatch_Policy__mdt/fields/Vendor_Program_Key__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Program_Key__c</fullName>
    <label>Vendor Program Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>